# gem5-with-chinese-comment

./: .gitignore  README  README.md  auto_debug  expand_img  fs  fs_sim.sh  fullsystem.sh  lack_list.txt  quickdiff  run  se  temp  update
configs/common/: Benchmarks.py  CacheConfig.py  Caches.py  FSConfig.py  HWPConfig.py  Options.py  SysPaths.py
configs/example/: se.py  spec06_benchmarks.py  spec06_config.py  spec06_se.py
configs/ruby/: MI_example.py  Ruby.py
ppf_engine/: SConscript  base.hh  filter_engine.hh
prefetch_filter/: PrefetchFilter.py  SConscript  base.cc  base.hh  ppf.cc  ppf.hh  pref_info.cc  pref_info.hh  program_helper.hh  saturated_counter.cc  saturated_counter.hh  table.cc  table.hh
script/: .fuse_hidden000032c500000001  .fuse_hidden0001680500000003  create-SimP-Checkpoint1.sh  create-Simpoint.sh  restore-simpoint-checkpoint.sh  spec2006-run-simpoint-checkpoint.sh  temp_for_run.sh
site_scons/site_tools/: git.py
src/arch/: isa_parser.py  micro_asm.py  micro_asm_test.py
src/base/: addr_range.hh  addr_range_map.hh  barrier.hh  bitfield.cc  bitunion.hh  bituniontest.cc  output.cc  statistics.hh
src/cpu/: BaseCPU.py  base.cc  base.hh
src/dev/: io_device.cc
src/mem/: XBar.py  coherent_xbar.cc  dram_ctrl.cc  packet.cc  packet.hh  packet_queue.cc  (+4 more)
util/: crosstool-ng-1.24.0-rc1.tar.bz2  gem5img.py  git-pre-commit.py  sfdisk
util/crosstool-ng-1.24.0-rc2/config/: configure.in
util/crosstool-ng-1.24.0-rc2/config/versions/: automake.in  dtc.in  elf2flt.in  expat.in  gcc.in  gmp.in  isl.in  moxiebox.in  mpfr.in  ncurses.in  newlib.in
(+1783 files in other folders)
